# Botnet

./: .gitignore  Cargo.toml  README.md  config.toml
src/: attacks.rs  c2.rs  config.rs  main.rs  utils.rs  web.rs
